--- a/nibs update.ipynb
+++ b/nibs update.ipynb
@@ -226,7 +226,7 @@
     "\n",
     "**a. Economic Interpretation of $α{i}$ and $β{i}$**\n",
     "\n",
-    "**Alpha ($α{i}$)**: This represents the strategy's excess return when the market's excess return ($R{M}$) is zero. Economically, it measures the \"abnormal\" rate of return—the value added by the portfolio manager's skill (e.g., stock selection or market timing) that cannot be explained by the strategy's exposure to the broad market. A positive, statistically significant alpha implies the strategy is outperforming the risk-adjusted benchmark.\n",
+    "**Alpha ($α{i}$)**: This represents the strategy's excess return when the market's excess return ($R_{M}$) is zero. Economically, it measures the \"abnormal\" rate of return—the value added by the portfolio manager's skill (e.g., stock selection or market timing) that cannot be explained by the strategy's exposure to the broad market. A positive, statistically significant alpha implies the strategy is outperforming the risk-adjusted benchmark.\n",
     "\n",
     "**Beta ($β{i}$)**: This measures the sensitivity of the strategy's returns to market movements. A beta of 1.0 implies the strategy moves in lockstep with the market (e.g., the S&P 500). A beta greater than 1 indicates the strategy is more volatile (amplified moves) than the market, while a beta less than 1 indicates it is less volatile. In active management, beta essentially quantifies the amount of systematic market risk the strategy is taking.\n",
     "\n",
