final final version, corrected, double checked

--- a/Homework2A.ipynb
+++ b/Homework2A.ipynb
@@ -392,90 +392,95 @@
    "id": "89773477-9ebc-4bfb-a49d-d3a1984382ee",
    "metadata": {},
    "source": [
-    "##### September to December changes\n",
+    "# FOMC Statement Text Changes Analysis\n",
+    "## September 18, 2024 → December 18, 2024 → January 29, 2025\n",
     "\n",
-    "##### A) Added in December, since September\n",
-    "- *“Available indicators suggest that economic activity has been expanding at a moderate pace.”*\n",
-    "  - New framing (“Available indicators… expanding…”) replaces September’s “Recent indicators… growth… moderated…”\n",
-    "- *“Job gains have slowed this year, and the unemployment rate has edged up through September.”*\n",
-    "  - (“this year,” “through September”) that wasn’t in September.\n",
-    "- *“More recent indicators are consistent with these developments.”*\n",
-    "  - Entire sentence is new.\n",
-    "- *“Inflation has moved up since earlier in the year and remains somewhat elevated.”*\n",
-    "  - Adds *“since earlier in the year”*.\n",
-    "- *“…judges that downside risks to employment rose in recent months.”*\n",
-    "  - Adds *“rose in recent months”*\n",
-    "- *Forward guidance expanded:*\n",
-    "  - September: “In considering additional adjustments…”\n",
-    "  - December: “In considering the extent and timing of additional adjustments…”\n",
+    "---\n",
     "\n",
-    "##### B) Removed in December, was in September\n",
-    "- *“The Committee will continue reducing its holdings of Treasury securities and agency debt and agency mortgage-backed securities.”*\n",
-    "  - This balance-sheet line is in September but not in December.\n",
+    "### September to December changes\n",
     "\n",
-    "##### C) Changed Voccabulary\n",
-    "- *Economic activity description replaced:*\n",
-    "  - “growth of economic activity **moderated** in the first half of the year”\n",
-    "  → “economic activity has been **expanding** at a moderate pace”\n",
+    "#### A) Added in December, since September\n",
+    "- *\"Since earlier in the year, labor market conditions have generally eased\"*\n",
+    "- *\"In considering the extent and timing of additional adjustments...\"*\n",
+    "  - Expanded from September's \"In considering additional adjustments...\" \n",
+    "\n",
+    "#### B) Removed in December, was in September  \n",
+    "- *\"The Committee has gained greater confidence that inflation is moving sustainably toward 2 percent\"*\n",
+    "- *\"In light of the progress on inflation and the balance of risks\"*\n",
+    "\n",
+    "#### C) Changed Vocabulary\n",
+    "- *Economic activity description unchanged:*\n",
+    "  - Both say \"economic activity has continued to expand at a solid pace\"\n",
     "- *Labor market description replaced:*\n",
-    "  - “unemployment rate has edged up but **remains low**”\n",
-    "  → “unemployment rate has edged up **through September**” (new “more recent indicators…”)\n",
-    "- *Inflation sentence:*\n",
-    "  - “Inflation has moved up and remains somewhat elevated.”\n",
-    "  → “Inflation has moved up **since earlier in the year** and remains somewhat elevated.”\n",
+    "  - \"Job gains have **slowed**... unemployment rate has moved up but **remains low**\"\n",
+    "  → \"labor market conditions have generally **eased**... unemployment rate has moved up but **remains low**\"\n",
+    "- *Inflation sentence changed:*\n",
+    "  - \"Inflation has made further progress toward the Committee's 2 percent objective but remains somewhat elevated.\"\n",
+    "  → \"Inflation has made progress toward the Committee's 2 percent objective but remains somewhat elevated.\"\n",
+    "  - Removes \"further\"\n",
     "- *Target range replaced:*\n",
-    "  - **4 to 4-1/4** (September)\n",
-    "  → **3-1/2 to 3-3/4** (December)\n",
+    "  - **4-3/4 to 5 percent** (September)\n",
+    "  → **4-1/4 to 4-1/2 percent** (December)\n",
+    "- *Policy action size:*\n",
+    "  - **1/2 percentage point** cut (September)\n",
+    "  → **1/4 percentage point** cut (December)\n",
     "\n",
     "---\n",
     "\n",
-    "##### December to January changes\n",
+    "### December to January changes\n",
     "\n",
-    "##### A) Added in January, since December\n",
-    "- *“Available indicators suggest that economic activity has been expanding at a solid pace.”*\n",
-    "  - From moderate to solid\n",
-    "- *“Job gains have remained low, and the unemployment rate has shown some signs of stabilization.”*\n",
-    "  - Replaces “slowed… edged up…” with “stabilization.”\n",
-    "- *“Inflation remains somewhat elevated.”*\n",
-    "  - Shorter sentence.\n",
-    "- *“In support of its goals, the Committee decided to maintain the target range…”*\n",
-    "  - Decision to maintain.\n",
+    "#### A) Added in January, since December\n",
+    "- *\"The unemployment rate has stabilized at a low level in recent months, and labor market conditions remain solid.\"*\n",
+    "- *\"In support of its goals, the Committee decided to maintain the target range...\"*\n",
     "\n",
-    "##### B) Removed in January, was in December\n",
-    "- *Removed the “more recent indicators” sentence:*\n",
-    "  - “More recent indicators are consistent with these developments.”\n",
-    "- *Removed the longer inflation sentence:*\n",
-    "  - “Inflation has moved up since earlier in the year and remains somewhat elevated.”\n",
-    "  - Replaced by “Inflation remains somewhat elevated.”\n",
-    "- *Removed explicit downside employment-risk clause:*\n",
-    "  - “…and judges that downside risks to employment rose in recent months.”\n",
-    "- *Removed the “shift in balance of risks” justification:*\n",
-    "  - “In support of its goals and in light of the shift in the balance of risks…”\n",
+    "#### B) Removed in January, was in December\n",
     "\n",
-    "##### C) Changed Voccabulary\n",
-    "- *Economic activity replaced:*\n",
-    "  - “expanding at a **moderate** pace”\n",
-    "  → “expanding at a **solid** pace”\n",
+    "- \"Since earlier in the year, labor market conditions have generally eased\"\n",
+    "- \"Inflation has made progress toward the Committee's 2 percent objective but remains somewhat elevated.\"\n",
+    "- December still had implicit forward guidance about further adjustments\n",
+    "\n",
+    "#### C) Changed Vocabulary\n",
+    "- *Economic activity unchanged:*\n",
+    "  - Both say \"economic activity has continued to expand at a solid pace\"\n",
     "- *Labor market replaced:*\n",
-    "  - “Job gains have **slowed** this year… unemployment… **edged up**”\n",
-    "  → “Job gains have **remained low**… unemployment… **stabilization**”\n",
+    "  - \"labor market conditions have generally **eased**... unemployment... **moved up** but remains low\"\n",
+    "  → \"unemployment rate has **stabilized** at a low level... labor market conditions remain **solid**\"\n",
+    "- *Inflation sentence simplified:*\n",
+    "  - \"Inflation has made progress toward the Committee's 2 percent objective but remains somewhat elevated.\"\n",
+    "  → \"Inflation remains somewhat elevated.\"\n",
     "- *Policy action replaced (cut → pause):*\n",
-    "  - “decided to **lower** the target range…”\n",
-    "  → “decided to **maintain** the target range…”\n",
-    "- *The focus on risk is repurposed:*\n",
-    "  - December: “attentive to the risks to both sides… and judges that downside risks to employment rose in recent months.”\n",
-    "  → January: “attentive to the risks to both sides of its dual mandate.”\n",
+    "  - \"decided to **lower** the target range... by 1/4 percentage point\"\n",
+    "  → \"decided to **maintain** the target range\"\n",
+    "- *Target range unchanged:*\n",
+    "  - **4-1/4 to 4-1/2 percent** (both December and January)\n",
     "\n",
     "---\n",
     "\n",
-    "By looking at the language in the FOMC statements and the actions and decisions in the statements, we can begin to understand a shift in expectations for the federal fund rate toward a flatter and more precaution over the next 12 months.\n",
+    "### Interpretation: Impact on Fed Funds Rate Expectations\n",
     "\n",
-    "The statements show a sequence of **cut (September) → cut (December) → pause (January)**.\n",
+    "By examining the language evolution across these FOMC statements and the corresponding policy actions, we can understand a clear shift in expectations for the federal funds rate toward a flatter path with greater caution over the next 12 months.\n",
     "\n",
-    "The December statement stands out as the one that leans the most towards easing because of its tone and the rate cut that happened, along with mentions of a \"downside risk to employment rising\" and \"the shift in the balance of risks\", which might be telling us that further cuts were possible at the time, depending on incoming data.\n",
+    "The statements show a sequence of **50bp cut (September) → 25bp cut (December) → pause (January)**.\n",
     "\n",
+    "**September** represented an aggressive easing pivot with a 50bp cut, justified by \"gained greater confidence that inflation is moving sustainably toward 2 percent.\"\n",
     "\n",
-    "However, when the January FOMC happens, the committee maintains its current range and updates the economic activity to being on \"solid pace\" and describes the labor market as showing signs of stabilization, and removes both the explicit downside of employment risks language and the \"shift in the balance of risks\" argument. At the same time, inflation is described as somewhat elevated and uncertainty about it's trajectory is high. Throughout all statements, putting all this together, these signals are telling us that relative to December, expectations for the next year move toward fewer, lower and later rate cuts with the Fed adopting a more data-dependent \"wait and see\" stance, and inflation acting as a key constraint on further easing."
+    "**December** slowed to a 25bp cut with more cautious language. The removal of \"gained greater confidence\" and downgrade from \"made further progress\" to \"made progress\" on inflation signaled growing concerns. The expanded forward guidance to include \"extent and timing\" of adjustments suggested increased uncertainty about the path ahead.\n",
+    "\n",
+    "**January** marked a clear inflection point by pausing rate cuts entirely. Labor market language shifted from \"eased\" to \"stabilized\" and \"solid,\" while inflation language was stripped of all progress framing, leaving only \"remains somewhat elevated.\"\n",
+    "\n",
+    "This evolution signals that expectations for the federal funds rate over the next 12 months should shift toward **fewer rate cuts** and a **flatter path**. The sequence from 50bp → 25bp → pause indicates the easing cycle is slowing or potentially ending earlier than previously anticipated. With labor markets now described as \"solid\" and inflation still \"somewhat elevated,\" inflation concerns have become the binding constraint on further easing, implying higher-for-longer rates than the September statement would have suggested.\n",
+    "\n",
+    "### Interpretation: Impact on Fed Funds Rate Expectations\n",
+    "\n",
+    "As we look across the FOMC statements, we see how they've strategically changed their language in order to send different indicators, which correspond with their policy actions. With the September, December, and January path, we can see a shift in expectations for the federal funds rate toward a flatter path that is more cautious over the next 12 months.\n",
+    "\n",
+    "The FOMC statements show that in September, there was a one-half percentage point lowering of the target range. In December, there was a one-fourth percentage point lowering of the target range, and in January there was a pause.\n",
+    "\n",
+    "The September cut was justified by gained greater confidence that inflation is moving sustainably toward 2%. In December, they were more cautious in their language, and the cut was 0.25 percentage points. They removed sentences that indicated confidence and downgraded the progress on inflation, which signals that they were concerned over those issues. In the December statement, you can sense an uncertainty about the path ahead. And finally, in January, there was a deviation from cuts to a pause of the rate cuts. In this last statement, there was a lot of language about the labor market and how it had gone from eased to stabilized and solid, while the language on inflation was no longer progressing, having only a somewhat elevated statement.\n",
+    "\n",
+    "So overall, the evolution of these statements tells us that we expect the federal funds rate over the next 12 months to see fewer rate cuts and a flatter path. This easing or slowing of the percentage point cuts indicates exactly that: an easing cycle is coming to a slow or ending earlier than we had previously thought. If you look at the language and the data that they're reporting now, the labor market is solid and inflation is still somewhat elevated. We know that inflation concerns are a constraint on further cuts or easing, implying higher for longer rates than the September statement would have suggested.\n",
+    "\n",
+    "Looking at the rate for the rest of 2025, this inution is mostly accurate, the fed started cutting well into 2025 in August, which in 2026 it has come down .70 points since then."
    ]
   },
   {
@@ -1086,6 +1091,14 @@
     "    'Value': [skewness_value]\n",
     "})\n",
     "skewness_df.style.hide(axis='index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "346d95a2-d9e7-4297-98b0-8747e1d77b54",
+   "metadata": {},
+   "source": [
+    "The strategy shows a positive skew of 0.29, meaning returns are usually small with occasional big upside moves."
    ]
   },
   {
